favicon adicionado e pequenas melhorias

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/calculator.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +16,7 @@
   <body>
     <main class="hero">
       <section class="container">
+        <img src="./img/mathematics.png" alt="" />
         <h1>Calculadora</h1>
         <header class="top">
           <p>
@@ -38,18 +40,18 @@
         </header>
         <section class="mid">
           <div class="botoes">
-            <button class="btn-soma">+</button>
-            <button class="btn-subtracao">-</button>
-            <button class="btn-divisao">/</button>
-            <button class="btn-multiplicacao">*</button>
-            <button class="btn-porcentagem">%</button>
+            <button class="btn-soma mais">+</button>
+            <button class="btn-subtracao menos">-</button>
+            <button class="btn-divisao divisao">/</button>
+            <button class="btn-multiplicacao multi">*</button>
+            <button class="btn-porcentagem porcentagem">%</button>
             <button type="reset">Reset</button>
           </div>
         </section>
         <section class="bottom">
           <button type="submit">Calcular</button>
         </section>
-        <h2 class="outResp">teste</h2>
+        <h2 class="outResp"></h2>
       </section>
     </main>
     <script src="./js/main.js"></script>
